# heart-disease-mlops

./: .gitignore  Dockerfile  EDA_UCI.ipynb  README.md  REPORT.md  app.py  download.py  download_data.py  environment.yml  mkdocs.yml  mlflow.db  noxfile.py  pyproject.toml  requirements.txt  setup_and_run.sh
.github/workflows/: ci-cd.yml  ci.yml  docs.yml
data/processed/: heart_disease_clean_binary.csv
doc/: api.md  architecture.md  assignment-mapping.md  ci-cd.md  containerization.md  deployment.md  eda.md  experiment-tracking.md  index.md  modeling.md  monitoring.md  setup.md
doc/_static/: extra.css
doc/reports/coverage/: coverage-report.xml  index.html
doc/reports/coverage/htmlcov/: class_index.html  function_index.html  status.json  z_145eef247bfb46b6_preprocessing_py.html  z_145eef247bfb46b6_training_py.html
doc/reports/format/: ruff-format-report.xml
doc/reports/pytest/: pytest-report.html  pytest-report.xml  pytest-report.xml.html
doc/reports/ruff/: ruff-lint-report.html  ruff-lint-report.xml.html
doc/reports/typing/: mypy-report.html  mypy-report.xml  mypy-report.xml.html
exploration/: eda.ipynb  modeling.ipynb
k8s/: deployment.yaml
monitoring/: prometheus.yml
screenshots/: README.md
site/: 404.html  api.html  architecture.html  assignment-mapping.html  ci-cd.html  containerization.html  deployment.html  eda.html  experiment-tracking.html  index.html  modeling.html  monitoring.html  setup.html
site/_static/: mermaid-init.js
site/eda/: index.html
site/experiment-tracking/: index.html
site/modeling/: index.html
site/reports/coverage/: coverage-report.xml  index.html
site/reports/coverage/htmlcov/: function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_eda_py.html
site/reports/format/: black-diff.patch  ruff-fix-diff.patch  ruff-format-report.html  ruff-format-report.xml.html
site/reports/pytest/: pytest-report.html  pytest-report.xml  pytest-report.xml.html
site/reports/ruff/: ruff-lint-report.html  ruff-lint-report.xml.html
site/reports/typing/: mypy-report.html  mypy-report.xml  mypy-report.xml.html
site/search/: search_index.json
src/: eda.py  preprocessing.py  training.py
tests/: test_preprocessing.py
