[project]
name = "mlops-pdel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mlflow>=3.7.0",
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
    "ruff>=0.14.7",
    "xgboost>=3.1.2",
]
lint = [
    "ruff~=0.14.7",
]
typing = [
    "mypy~=1.19.0",
]

[tool.ruff]
line-length = 120
exclude = ["build/", "dist/", ".nox/", "noxfile.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.mypy]
exclude = ["build/", "dist/", ".nox/", "noxfile.py"] 
