[project]
name = "heart_disease_mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "prometheus-client>=0.23.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mlflow>=3.7.0",
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
    "ruff>=0.14.7",
    "xgboost>=3.1.2",
]
lint = [
    "junit2html>=31.0.5",
    "ruff~=0.14.7",
]
format = [
    "black[jupyter]>=25.12.0",
    "junit2html>=31.0.5",
    "ruff~=0.14.7",
]
typing = [
    "mypy~=1.19.0",
]

[tool.ruff]
preview = true
line-length = 120
exclude = ["build/", "dist/", ".nox/", "noxfile.py", "tests/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Whole rules families
    "D",
    "ANN",
    "FIX",
    "COM",
    "EM",
    # Specific rule code
    # flake8-unused-arguments (ARG)
    "ARG002",
    "ARG003",
    "ARG004",
    # tryceratops (TRY)
    "TRY002",
    "TRY003",
]

[tool.mypy]
exclude = ["build/", "dist/", ".nox/", "noxfile.py", "tests/"] 
