[project]
name = "heart_disease_mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "onnx>=1.20.0",
    "prometheus-client>=0.23.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skl2onnx>=1.19.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mlflow>=3.7.0",
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
    "ruff>=0.14.7",
    "xgboost>=3.1.2",
]
lint = [
    "junit2html>=31.0.5",
    "ruff~=0.14.7",
]
format = [
    "junit2html>=31.0.5",
    "ruff~=0.14.7",
]
typing = [
    "junit2html>=31.0.5",
    "mypy~=1.19.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.3.0",
    "junit2html>=31.0.5",
]

[tool.ruff]
preview = true
line-length = 120
exclude = ["build/", "dist/", ".nox/", "noxfile.py", "tests/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Whole rules families
    "D",
    "ANN",
    "FIX",
    "COM",
    "EM",
    # Specific rule code
    # flake8-unused-arguments (ARG)
    "ARG002",
    "ARG003",
    "ARG004",
    # tryceratops (TRY)
    "TRY002",
    "TRY003",
]

[tool.mypy]
exclude = ["build/", "dist/", ".nox/", "noxfile.py", "tests/"] 
